# racechrono-lap-analyzer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/racechrono_lap_analyzer/: __init__.py  __main__.py  analysis.py  app.py  charts.py  data_parser.py  rules.py
src/racechrono_lap_analyzer/i18n/: __init__.py  en.json  zh-CN.json
src/racechrono_lap_analyzer/tracks/: tianma.json
tests/: test_analysis.py  test_charts.py  test_data_parser.py  test_i18n.py  test_rules.py
tests/data/: session_20251231_111318_tianma_lap9_v3.csv  session_20251231_111959_tianma_lap13_v3.csv
